--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <div class="fixed left-6 top-1/2 transform -translate-y-1/2 z-40 hidden md:flex flex-col items-center space-y-6">
-        <a href="https://github.com/PakCoders786" target="_blank" class="social-icon w-10 h-10 flex items-center justify-center text-gray-600 hover:text-primary">
+        <a href="https://github.com/FalconCode786" target="_blank" class="social-icon w-10 h-10 flex items-center justify-center text-gray-600 hover:text-primary">
             <i class="ri-github-fill ri-lg"></i>
         </a>
         <a href="https://www.linkedin.com/in/muhammad-haseeb-980b16366/" target="_blank" class="social-icon w-10 h-10 flex items-center justify-center text-gray-600 hover:text-primary">
